fixed responsiveness for header and overlap of header + about section

--- a/styles.css
+++ b/styles.css
@@ -418,7 +418,7 @@ footer {
   }
 
   h1 {
-    max-width: 100%;
+    max-width: 80%;
     padding-left: 0;
     text-align: center;
     font-size: 6vh;
